# ZhyNdkDemo

./: OCZ_ClientDownloader.apk  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/dahai/zhyndkdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  StudyMessageQueue.cpp  lib2.cpp  native-lib.cpp
app/src/main/java/com/dahai/zhyndkdemo/: JniHandler.java  MainActivity.java  MyClass.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/dahai/zhyndkdemo/: ExampleUnitTest.java
distribution/gmath/include/: gmath.h
gradle/wrapper/: gradle-wrapper.properties
mylibraryOne/: build.gradle
mylibraryOne/src/androidTest/java/com/dahai/mylibraryone/: ExampleInstrumentedTest.java
mylibraryOne/src/main/: AndroidManifest.xml
mylibraryOne/src/main/cpp/: CMakeLists.txt
mylibraryOne/src/main/cpp/gmath/: CMakeLists.txt
mylibraryOne/src/main/cpp/gmath/src/: gmath.c
mylibraryOne/src/main/cpp/gperf/: CMakeLists.txt
mylibraryOne/src/main/cpp/gperf/src/: gperf.c  gperf.h
mylibraryOne/src/test/java/com/dahai/mylibraryone/: ExampleUnitTest.java
